--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>桐桐张</title>
+</head>
 <body>
 
 hello
