--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>tongtongzhang欢迎你</title>
 </head>
-<body>
-<script>window.location.href = 'http://www.jb51.net';</script>
-
+<body >
+<script>window.location.href = "html/love20180323.html";</script>
 </body>
 </html>
