--- a/html/love20180323.html
+++ b/html/love20180323.html
@@ -29,8 +29,8 @@
 
 <div class="center">
 
-    <img src="../images/love/1.jpg" class="imgCenter">
-    <img src="../images/love/1.jpg" class="imgCenter marginTop">
+    <img src="../images/love/love_hai_1.jpg" class="imgCenter">
+    <img src="../images/love/love_xue_1.jpg" class="imgCenter marginTop">
 
     <!--<img src="../images/llove_hai_1.jpgjpeg" align="middle">-->
     <!--<img src="../images/llove_xue_1.jpgjpeg" align="middle">-->
