--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>tongtongzhang欢迎你</title>
 </head>
-<body style="text-align: center">
+<body>
 <!--<script>window.location.href = "html/love20180323.html";</script>-->
 
-<h1 id="sp" style="align-content: center">3</h1>
+<h2 id="sp" style="align-content: center">3</h2>
 
 <script type="text/javascript">
     onload = function () {
