--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         if (x > 0) {
             document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
         } else {
-            location.href = 'html/love20180323.html';
+//            location.href = 'html/love20180323.html';
+            location.href = 'loves/one/index.html';
         }
     }
 </script>
