音乐自动播放

--- a/loves/one/index.html
+++ b/loves/one/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<frameset cols="0%,100%">
+<frameset rows="50%,50%" >
     <frame src="music.html">
     <frame src="index1.html">
 </frameset>
