音乐自动播放
添加播放控制器

--- a/loves/one/music.html
+++ b/loves/one/music.html
@@ -29,6 +29,8 @@
     </script>
 </head>
 <body>
-<audio src="zcjdn.mp3" autoplay="autoplay"></audio>
+<center>
+    <audio src="zcjdn.mp3" autoplay="autoplay" controls="controls"></audio>
+</center>
 </body>
 </html>
