--- a/loves/one/index.html
+++ b/loves/one/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<header>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0, minimum-scale=1.0,
+           maximum-scale=1.0, user-scalable=no"/>
+</header>
+
 <frameset rows="90%,10%">
     <frame src="index1.html">
     <frame src="music.html">
