--- a/loves/one/index1.html
+++ b/loves/one/index1.html
@@ -97,7 +97,7 @@
         <table width="100%" border="0" height="100%">
             <tbody>
             <tr>
-                <td align="center">凤<span class="big">求</span>凰</td>
+                <td align="center">凤凤<span class="big">求</span>凰凰</td>
             </tr>
             </tbody>
         </table>
