适配手机站

--- a/loves/one/index1.html
+++ b/loves/one/index1.html
@@ -54,7 +54,7 @@
             border-radius: 5px;
         }
     </style>
-    <script type="text/javascript" src="./jscss/jquery.min.js"></script>
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script>
         $(document).ready(function (e) {
             /* 定时执行方法 */
@@ -69,7 +69,7 @@
                         window.clearInterval(timer);
                         $.change();
                     } else {
-                        alert("嘿嘿");
+                        window.location = "index22.html";
                     }
 
                 }
