--- a/loves/one/index22.html
+++ b/loves/one/index22.html
@@ -19,9 +19,12 @@
 </head>
 
 <body>
-<div id="mainDiv">
-    <div id="content" style="margin-top: 2rem ;margin-left: 1rem; margin-right: 1rem">
-        <div id="code" style="height: 66rem">
+
+
+
+<div id="mainDiv" style="display: block;">
+    <div id="content">
+        <div id="code">
             <span class="comments">/**</span>
             <br>
             <span class="space">
@@ -90,55 +93,52 @@
                 </span>
             </span>_
         </div>
-        <div id="loveHeart">
-            <canvas id="garden"></canvas>
-            <div id="words">
-                <div id="messages" style="display: block;">
-                    某人，
-                    <div id="elapseClock" style="display:none"></div>
-                    <a href="index3.html" id="accept">请点击这里</a>
-                </div>
-                <div id="loveu" style="display: block;">
-                    ，远。<br>
-                    <div class="signature">- Love</div>
-                </div>
-            </div>
+    </div>
+</div>
+<div id="loveHeart" style="display: block;">
+    <div id="words">
+        <div id="messages" style="display: block;">
+            某人，我将会等着你爱我
+            <div id="elapseClock" style="display:none"></div>
+            <a href="index3.html" id="accept">如果你接受我，请点击这里</a>
+        </div>
+        <div id="loveu" style="display: block;">
+            爱你，直到永永远远。<br>
+            <div class="signature">- Love</div>
         </div>
     </div>
-
 </div>
-
-
 <script type="text/javascript">
-    //    var offsetX = $("#loveHeart").width() / 2;
-    //    var offsetY = $("#loveHeart").height() / 2 - 55;
-
-    //    if (!document.createElement('canvas').getContext) {
-    //        var msg = document.createElement("div");
-    //        msg.id = "errorMsg";
-    //        msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
-    //        document.body.appendChild(msg);
-    //        $("#code").css("display", "none");
-    //        $("#copyright").css("position", "absolute");
-    //        $("#copyright").css("bottom", "10px");
-    //        document.execCommand("stop");
-    //    } else {
-    //        setTimeout(function () {
-    //            adjustWordsPosition();
+        var offsetX = $("#loveHeart").width() / 2;
+        var offsetY = $("#loveHeart").height() / 2 - 55;
+        if (!document.createElement('canvas').getContext) {
+            var msg = document.createElement("div");
+            msg.id = "errorMsg";
+            msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
+            document.body.appendChild(msg);
+            $("#code").css("display", "none");
+            $("#copyright").css("position", "absolute");
+            $("#copyright").css("bottom", "10px");
+            document.execCommand("stop");
+        } else {
+            setTimeout(function () {
+                adjustWordsPosition();
     //            startHeartAnimation();
-    //        }, 10000);
-    //        $("#accept").click(function () {
-    //            $(this).hide();
-    //            $("#elapseClock").show();
-    //            var together = new Date();
-    //            timeElapse(together);
-    //            setInterval(function () {
-    //                timeElapse(together);
-    //            }, 500);
-    //        });
-    //    }
-    //    adjustCodePosition();
-    $("#code").typewriter();
+            }, 1000);
+
+            $("#accept").click(function () {
+                $(this).hide();
+                $("#elapseClock").show();
+                var together = new Date();
+                timeElapse(together);
+                setInterval(function () {
+                    timeElapse(together);
+                }, 500);
+            });
+            adjustCodePosition();
+            $("#code").typewriter();
+        }
 </script>
+
 </body>
 </html>
