--- a/loves/one/index2.html
+++ b/loves/one/index2.html
@@ -41,9 +41,13 @@
                         <br>
                         i.embraced(u);
                         <br>
-                        <span class="comments">// 然后你...没有说话，默认接受。 </span>
+                        <span class="comments">// 然后你...没有说话，默认接受了我。 </span>
                         <br>
                         u.accepting(i);
+                        <br>
+                        <span class="comments">// 我们在一起成了一对情侣。</span>
+                        <br>
+                        Lovers lovers = <span class="keyword">new</span> Lovers(i,u);
                         <br>
                         <span class="comments">// 没有原因。</span>
                         <br>
@@ -100,7 +104,7 @@
                 </div>
                 <div id="loveu" style="display: block;">
                     ，远。<br>
-                    <div class="signature">- Love</div>
+                    <div class="signature"> -- LOVE</div>
                 </div>
             </div>
         </div>
@@ -138,7 +142,7 @@
     //        });
     //    }
     //    adjustCodePosition();
-    $("#code").typewriter();
+//    $("#code").typewriter();
 </script>
 </body>
 </html>
