--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>tongtongzhang欢迎你</title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0, minimum-scale=1.0,
+           maximum-scale=1.0, user-scalable=no"/>
+    <title>新的一天，欢迎你</title>
 </head>
 <body>
-<!--<script>window.location.href = "html/love20180323.html";</script>-->
-
-<h2 id="sp" style="align-content: center">3</h2>
-
+<!--<h2 id="sp" style="align-content: center">3</h2>-->
 <script type="text/javascript">
     onload = function () {
-        setInterval(go, 1000);
+        setInterval(go, 10);
     };
     var x = 3; //利用了全局变量来执行
     function go() {
-        x--;
-        if (x > 0) {
-            document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
-        } else {
-//            location.href = 'html/love20180323.html';
-            location.href = 'loves/one/index.html';
-        }
+//        x--;
+//        if (x > 0) {
+//            document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
+//        } else {
+//            location.href = 'loves/one/index.html';
+//        }
+        location.href = 'loves/one/index.html';
     }
 </script>
 
