--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <title>新的一天，欢迎你</title>
 </head>
 <body>
-<!--<h2 id="sp" style="align-content: center">3</h2>-->
+<h2 id="sp" style="align-content: center">3</h2>
 <script type="text/javascript">
     onload = function () {
         setInterval(go, 10);
     };
     var x = 3; //利用了全局变量来执行
     function go() {
-//        x--;
-//        if (x > 0) {
-//            document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
-//        } else {
-//            location.href = 'loves/one/index.html';
-//        }
+        x--;
+        if (x > 0) {
+            document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
+        } else {
+            location.href = 'loves/one/index.html';
+        }
+
         location.href = 'loves/one/index.html';
     }
 </script>
