--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         } else {
             location.href = 'loves/one/index.html';
         }
-
-        location.href = 'loves/one/index.html';
+//        location.href = 'loves/one/index.html';
     }
 </script>
 
