--- a/loves/one/index2.html
+++ b/loves/one/index2.html
@@ -8,7 +8,7 @@
            maximum-scale=1.0, user-scalable=no"/>
     <link href="./jscss/default.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="../../js/jquery.js"></script>
-    <script type="text/javascript" src="./jscss/functions.js"></script>
+    <script type="text/javascript" src="../../js/functions.js"></script>
 </head>
 
 <body>
