--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         } else {
             location.href = 'loves/one/index.html';
         }
-//        location.href = 'loves/one/index.html';
+//        location.href = 'loves/one/demo.html';
     }
 </script>
 
