--- a/loves/xue/xue.html
+++ b/loves/xue/xue.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../../js/jquery-2.1.4.min.js"></script>
     <script src="../../js/jquery.lettering.js"></script>
     <script src="../../js/jquery.textillate.js"></script>
-    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/daziji.js"></script>
 </head>
 <body>
 
@@ -190,7 +190,7 @@
 
 <script>
     var divCode = $("#div_txt");
-    divCode.typewriter(30);
+    divCode.typewriterDaziji(30);
 </script>
 
 </body>
