--- a/loves/xue/xue.html
+++ b/loves/xue/xue.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="js/daziji.js"></script>
 </head>
 <body>
-
+<canvas id="c" style="z-index: -1;position: absolute;"></canvas>
 <!-- 正文 -->
 <div class="view-top" style="text-align: center">
     <div class="heart-vt">
@@ -37,7 +37,6 @@
 
 <div>
 
-    <canvas id="c" style="z-index: -1;position: absolute;width: 100% ; margin-right: 120px"></canvas>
     <div id="div_txt">
     <span>
         <span class="bigBlue">叔叔：</span>
@@ -66,6 +65,7 @@
         不像你那样天天说想你，因为我总觉得<span class="bigBlue">大爱无言</span>。
         因为我总觉得我比你小，你应该多爱我，即使我对你有多喜欢、多想你，也不想说出来，但是我真的有每天都像你
         ，每天都会和朋友谈起你我也曾幻想过以后和你在一起的日子，想过<span class="bigBlue">无数</span>次。
+
     </span>
     </div>
 </div>
@@ -73,10 +73,12 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+
+
         var canvas = document.getElementById("c");
         //宽高自适应
         canvas.width = window.document.body.scrollWidth;
-        canvas.height = document.getElementById("div_txt").scrollHeight;
+        canvas.height = window.document.body.scrollHeight;
         var ctx = canvas.getContext("2d");
         var c = $("#c");
         var w, h;
@@ -145,8 +147,8 @@
             }
         };
         function window_resize() {
-            w = window.innerWidth;
-            h = window.innerHeight;
+//            w = window.innerWidth;
+//            h = window.innerHeight;
 //            canvas.width = w;
 //            canvas.height = h;
         }
@@ -190,7 +192,7 @@
 
 <script>
     var divCode = $("#div_txt");
-    divCode.typewriterDaziji(30);
+    divCode.typewriterDaziji(3);
 </script>
 
 </body>
