--- a/loves/xue/xue.html
+++ b/loves/xue/xue.html
@@ -46,7 +46,7 @@
         最后还是变成了我等你。
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         曾经超喜欢兵哥哥的我，如今也要退伍了。两年我们都变过，都没有说为对方坚持到底过，
-        我一直在别人身上寻找你的影子，可是你我是你无法复制。
+        我一直在别人身上寻找你的影子，但是<span class="bigBlue">你就是你，无法复制</span>。
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <span style="font-size: 1.2rem">
             没觉得与你分开的那些日子，我总是在不间断的联系你吗？知道我为什么一直没有换上海的号码吗？
