--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     };
     var x = 3; //利用了全局变量来执行
     function go() {
-//        x--;
-//        if (x > 0) {
-//            document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
-//        } else {
-//            location.href = 'loves/one/index.html';
-//        }
-//        location.href = 'loves/one/demo.html';
+       x--;
+       if (x > 0) {
+           document.getElementById("sp").innerHTML = x; //每次设置的x的值都不一样了。
+       } else {
+           location.href = 'loves/one/index.html';
+       }
+       location.href = 'loves/one/demo.html';
     }
 </script>
 
