--- a/loves/one/index2.html
+++ b/loves/one/index2.html
@@ -80,7 +80,7 @@
                         ...
                         <br>
                         <br>
-                        <span class="comments">// 然后你参军入伍。</span>
+                        <span class="comments">// 然后你去完成自己的梦想。</span>
                         <br>
                         u.joinTheArmy()
                         <br>
