--- a/html/lovedate.html
+++ b/html/lovedate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>时间操作</title>
+    <title>爱的小日子</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
         <li class="list-group-item" id="currentDate"></li>
         <li class="list-group-item">恋爱 ❤️纪念日：2013年09月11日</li>
         <li class="list-group-item" id="dayCharLove"></li>
-        <li class="list-group-item">入伍 👊纪念日：2016年09月27日</li>
+        <li class="list-group-item">上交 👊纪念日：2016年09月27日</li>
         <li class="list-group-item" id="dayCharArmy"></li>
         <li class="list-group-item" id="dayChar"></li>
     </ul>
